# singularity-plugins

./: CONTRIBUTING.md  README.md  meson.build
caffeine/: caffeine.plugin  caffeine.vala  meson.build
clipboard-history/: clipboard-history.plugin  clipboard-history.vala  meson.build
color-picker/: color-picker.plugin  color-picker.vala  meson.build
disk-usage/: disk-usage.plugin  disk-usage.vala  meson.build
downloads-dock/: downloads-dock.plugin  downloads-dock.vala  meson.build
emoji-search/: emoji-search.plugin  emoji-search.vala  meson.build
example-dock/: example-dock.plugin  example-dock.vala  meson.build
launcher-entry-dock/: launcher-entry-dock.plugin  launcher-entry-dock.vala  meson.build
media-controls/: media-controls.plugin  media-controls.vala  meson.build
mpris-dock/: meson.build  mpris-dock.plugin  mpris-dock.vala
notification-test/: meson.build  notification-test.plugin  notification-test.vala
pomodoro/: meson.build  pomodoro.plugin  pomodoro.vala
quick-notes/: meson.build  quick-notes.plugin  quick-notes.vala
status-monitor/: meson.build  status-monitor.plugin  status-monitor.vala
tailscale/: meson.build  tailscale.plugin  tailscale.vala
telegram-dock/: meson.build  telegram-dock.plugin  telegram-dock.vala
tray-icons/: dbusmenu_client.vala  meson.build  sni_dbus.vala  tray-icons.plugin  tray-icons.vala  tray_item.vala  watcher.vala
weather/: meson.build  weather.plugin  weather.vala
workspaces-indicator/: meson.build  workspaces-indicator.plugin  workspaces-indicator.vala
